--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "axios": "^0.25.0",
+    "axois": "0.0.1-security",
+    "settings": "^0.1.1"
   }
 }
